@@ -316,24 +316,20 @@
     </sect2>
     
     <sect2 id="syslog-stats">
-    	<title>To View Log Properties</title>
-    	<para>To view the properties of a log, choose
-    	<menuchoice><guimenu>Log</guimenu><guimenuitem>Properties</guimenuitem></menuchoice>.
-    	A <guilabel>Properties</guilabel> dialog will display the following information about the log:</para> 
+    	<title>To View Log Information</title>
+    	<para>Log information are generally displayed in the status bar,
+    	including :</para> 
     	<itemizedlist>
-    		<listitem><para>Its size in bytes.</para>
-    		</listitem>
-    		<listitem><para>Date it was last modified.</para>
-    		</listitem>
-    		<listitem><para>Date it was created.</para>
-    		</listitem>
-    		<listitem><para>Date of the most recent log entry.</para>
-    		</listitem>
     		<listitem><para>Number of lines in the log.</para>
     		</listitem>
+    		<listitem><para>Size of the log in bytes.</para>
+    		</listitem>
+    		<listitem><para>Date the log was last modified.</para>
+    		</listitem>
     	</itemizedlist> 
-        <para>Note that the number of lines and the date of last modification
-    	are also conveniently displayed in the status bar.</para>
+        <para>The status bar can be displayed or hidden using the
+          <menuchoice><guimenu>View</guimenu><guimenuitem>Statusbar</guimenuitem></menuchoice>
+          option.</para>
     </sect2>
     
     <sect2 id="syslog-close">
